fix(service-post): content alignment

--- a/app/public/wp-content/themes/softsolutions/scss/_single-post.scss
+++ b/app/public/wp-content/themes/softsolutions/scss/_single-post.scss
@@ -37,3 +37,6 @@
     }
   }
 }
+.wp-block-columns {
+  align-items: center !important;
+}
